--- a/Morita/morita.tex
+++ b/Morita/morita.tex
@@ -362,6 +362,8 @@ Let $V_2$ be the 'mapping torus' of $T$ i.e the quotient $(\mathbb{T}^2\times \R
 	
 	\bibitem {B} Moerdijk, I.,  Mrcun, J .  \textit{Introduction to Foliations and Lie Groupoids},
 Cambridge Studies in Advanced Mathematics, (2003)
+
+\bibitem{HS}MICHEL HILSUM, GEORGE SSKANDALIS. \textit{MorphismesK-orientés d’espaces de feuilles et fonctorialité en théoriede Kasparov (d’après une conjecture d’A. Connes)}, Annales scientifiques de l’É.N.S. 4esérie, tome  20, no3 (1987), p. 325-390
 	
 	
 \end{thebibliography}
