--- a/Morita/morita.tex
+++ b/Morita/morita.tex
@@ -258,7 +258,7 @@ In other words, $\CG_1'=\coprod_{i,j}\Omega_{1,i}^j$ is a groupoid, which is equ
 \begin{equation}
 g_{i,j}': \CG_{1,T_{1,j}}^{T_{1,i}}\to \CG_{2,T_{2,j}}^{T{_2,i}}
 \end{equation}
-be the projection to the transversal of the restriction of $g_{ij}$ to $\CG_{1,T_{1,j}}^{T_{1,i}}$. Note that $T_j$ is a transversal of $(V_i,F_j)$, and $T_1$ is faithful (i.e. meets all the leaves of $(V_1,F_1)$), and $g_{i,j}' $ defines a $C^{\infty}$ homomorphism $g': \CG_{1,T_1}^{T_1}\to \CG_{1,T_2}^{T_2}$ (where $\CG_{i,T_i}^{T_i} = \coprod_{j, k} \CG_{i,T_{i,k}}^{T_{i, j}}$} . 
+be the projection to the transversal of the restriction of $g_{ij}$ to $\CG_{1,T_{1,j}}^{T_{1,i}}$. Note that $T_j$ is a transversal of $(V_i,F_j)$, and $T_1$ is faithful (i.e. meets all the leaves of $(V_1,F_1)$), and $g_{i,j}' $ defines a $C^{\infty}$ homomorphism $g': \CG_{1,T_1}^{T_1}\to \CG_{1,T_2}^{T_2}$ (where $\CG_{i,T_i}^{T_i} = \coprod_{j, k} \CG_{i,T_{i,k}}^{T_{i, j}}$ . 
 \begin{prop}
 	An $C^{\infty}$ map $f:V_1/F_1 \to V_2/F_2$ is defined by the following equivalent data
 	\begin{enumerate}
@@ -293,7 +293,7 @@ The map $f: V_1/F_1 \to V_2/F_2$ is said to be a submersion if the following equ
 \end{enumerate}
 \end{defn}
 
-If $f: V_1/F_1 \to V_2/F_2$ is a submersion, then the foliation $F_2$ is pulled back by $f$ to a foliation $F_2'$ on $V_1$. In this case $F_1 \subset F_2'$ and the whole situation is described by this double foliation of $V_1$ and the etale map $V_1/F_2' \to V_2\F_2$.
+If $f: V_1/F_1 \to V_2/F_2$ is a submersion, then the foliation $F_2$ is pulled back by $f$ to a foliation $F_2'$ on $V_1$. In this case $F_1 \subset F_2'$ and the whole situation is described by this double foliation of $V_1$ and the etale map $V_1/F_2' \to V_2/F_2$.
 
 We only give the definition of immersions according to the equivalent data $(i)$ and $(iv)$ in the definition 2.1.
 
