--- a/Morita/morita.tex
+++ b/Morita/morita.tex
@@ -313,7 +313,7 @@ A map $f: V_1/ F_1 \to V_2/F_2$ is said to be an immersion if the following equi
      
      \item For any map $f$, as $r: \CG_f \to V_1$ is a submersion, $dr^{-1}(F_1)$ is intergrable fiber bundle of $T\CG_f$ and we have $dr^{-1}(F_1) \subset ds^{-1}(F_2)$. However $ds^{-1}(F_2)$ is not always a vector bundle since the dimesion can vary. We will say that $f$ is of {\it constant rank} if the dimension of $ds^{-1}(F_2)$ is constant. In this case $ds^{-1}(F_2)$ is a foliation on $\CG_f$.
      
-     \item From a naive point of view, a map of $V_1/F_1 \to V_2/F_2$ is a map $f: V_1 \to V_2/F_2$ which passes to the quotient $V_1/F_1$ i.e. contant on the leaves of $(V_1, F_1)$. A map $f: V_1 \to V_2/ F_2$ is given by its graph $\CG_f$ which is a $\CG_2$ principal bundle over $V_1$. From a set point of view, $f$ passes to quotient if $dr^{-1}(F_1) \subset ds^{-1}(F_2)$. However this condition is not sufficient \footnote{It is in the case where $f$ is a submerion.} and we must suppose that $\CG_1$ acts in $\CG_f$. A simple example where these two notions are distinct is given by the case where $V_1$,  foliated by a single leaf, is a holonomy nontrivial leaf of $V_1/F_2$. The graph of inclusion is then $\CG_f = \CG_2^{V_1}= \{\gamma \in \CG_2, r(\gamma) \in V_1\} $. But the groupoid $CG_1 = V_1 \times 
+     \item From a naive point of view, a map of $V_1/F_1 \to V_2/F_2$ is a map $f: V_1 \to V_2/F_2$ which passes to the quotient $V_1/F_1$ i.e. contant on the leaves of $(V_1, F_1)$. A map $f: V_1 \to V_2/ F_2$ is given by its graph $\CG_f$ which is a $\CG_2$ principal bundle over $V_1$. From a set point of view, $f$ passes to quotient if $dr^{-1}(F_1) \subset ds^{-1}(F_2)$. However this condition is not sufficient \footnote{It is in the case where $f$ is a submerion.} and we must suppose that $\CG_1$ acts in $\CG_f$. A simple example where these two notions are distinct is given by the case where $V_1$,  foliated by a single leaf, is a holonomy nontrivial leaf of $V_1/F_2$. The graph of inclusion is then $\CG_f = \CG_2^{V_1}= \{\gamma \in \CG_2, r(\gamma) \in V_1\} $. But the groupoid $\CG_1 = V_1 \times 
      V_1$ does not act in $\CG_f$. Note that we should not be confused with this map $f: V_1 \to V_1/F_1$ which does not pass to the quotient with the composition $V_1 \to pt \to V_2/F_2$ of graph $V_1 \times \CG_2^x$ (where $x\in V_1$ and $\CG_2^x = \{\gamma \in \CG_2, r(\gamma) = x\}$ which of course pass to the quotient. \end{itemize} 
      
      More generally, if $V_1$ is a submanifold of $V_2$, the map $f$ of $V_1$ in $V_2/F_2$ passes to the quotient id and only if:
