Updates from Overleaf

--- a/Morita/morita.tex
+++ b/Morita/morita.tex
@@ -243,7 +243,7 @@ The differentiability of the actions by $\CG_1$ and $\CG_2$ is defined as follow
 
 Let $\CG_1 \times_{V_1} \CG_f=\{(\gamma_1,x)\in \CG_1 \times \CG_f| r(x)=s(\gamma_1) \}$ and $ G_f\times_{V_2}\CG_2 =\{(x,\gamma_2)\in \CG_f \times \CG_2| r(\gamma_2)=s(x) \}$. These are varieties as $s:\CG_1 \to V_1$, $r:\CG_2 \to V_2$ are submersions. The maps $(\gamma_1,x)\mapsto \gamma_1x$ and $(x,\gamma_2) \mapsto x\gamma_2$ are $C^{\infty}$.
 
-Note that then $\CG_f$ is foliated by $F=(dr)^{-1}(F_1)$, and the quotient space $V_1/F_1$ is isomorphic to $\CG_f/F$ by $r$ and the action $s$ defines a homomorphism of the groupoid of the graph of the foliation $G_f, F)$ with values in $\CG_2$. Therefore, we can regard $f$ as a homomorphism of the holonomy groupoid of a desingularization of $V_1/F_1$ in $\CG_2$ ( or in groupoid of any desingularization of $V_2/F_2$).
+Note that then $\CG_f$ is foliated by $F=(dr)^{-1}(F_1)$, and the quotient space $V_1/F_1$ is isomorphic to $\CG_f/F$ by $r$ and the action $s$ defines a homomorphism of the groupoid of the graph of the foliation $(G_f, F)$ with values in $\CG_2$. Therefore, we can regard $f$ as a homomorphism of the holonomy groupoid of a desingularization of $V_1/F_1$ to $\CG_2$ ( or in groupoid to any desingularization of $V_2/F_2$).
 
 An equivalent way of defining a map $f$ from $V_1/F_1$ to $V_2/F_2$ is given by the notion of a cocycle of $\CG_1$ with values in $\CG_2$, i.e. an open covering $\{\Omega_i\}$   of $V_1$ and a $C^{\infty}$ map $g_{ij}: \CG_{1,i}^j \to \CG_2$, where
 \begin{equation}
